objects/CPK_Report_Access_List__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Stage__c</field>
                <operation>notEqual</operation>
                <value>Unqualified</value>
            </filterItems>
            <filterItems>
                <field>Account.Stage__c</field>
                <operation>notEqual</operation>
                <value>Inactive</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Associated Customers</relationshipLabel>
        <relationshipName>JunctionobjectBtwCPKReportAcct</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CE_Owner_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CE Owner 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPK_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CE_Owner_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CE Owner 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPK_Customers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CE_Owner_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CE Owner 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPK_Customers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPK_Report__c</fullName>
        <label>CPK Report</label>
        <referenceTo>CPK_Report__c</referenceTo>
        <relationshipName>JunctionobjectBtwCPKReportAcct</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CheckThroughClass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckThroughClass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAB__c</fullName>
        <formula>CPK_Report__r.FABS__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FAB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpenTextId__c</fullName>
        <formula>CPK_Report__r.OpenTextId__c</formula>
        <label>OpenTextId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <formula>Account__r.Short_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>&apos;CPK&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <label>Associated Customer</label>
    <nameField>
        <displayFormat>AL-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Customers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>